Fix icon size on Firefox

--- a/src/components/Cropper.css
+++ b/src/components/Cropper.css
@@ -41,11 +41,15 @@
   display: block;
   width: 100%;
   padding: 5px;
+  font-family: sans-serif;
+  text-align: center;
   background-color: white;
   border: 0;
-  font-size: 0.8rem;
-  text-align: center;
   transition: background-color ease-in-out 200ms;
+}
+
+.controllerButton:hover {
+  background-color: #D1D1D1;
 }
 
 .controllerButton:disabled {
@@ -56,6 +60,10 @@
 .controllerButton:focus {
   outline: none;
   box-shadow: inset 0 0 3px grey;
+}
+
+.controllerButton svg {
+  width: 10px;
 }
 
 .plus:hover,
